Add basic markup and css for login page component

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,1 +1,23 @@
-<!-- HTML to look like reddit signup page -->
+<div class="wrapper">
+  <form class="accCreationForm">
+    <h4>CREATE A NEW ACCOUNT</h4>
+    <input id="accName" type="text" placeholder="choose a username"/>
+    <br />
+    <input id="accPw" type="text" placeholder="password"/>
+    <br />
+    <input id="accVerifyPw" type="text" placeholder="verify password"/>
+    <br />
+    <button>SIGN UP</button>
+  </form>
+
+  <div class="separator"></div>
+
+  <form class="loginForm">
+    <h4>LOGIN</h4>
+    <input id="loginName" type="text" placeholder="username"/>
+    <br />
+    <input id="loginPw" type="text" placeholder="password"/>
+    <br />
+    <button>LOG IN</button>
+  </form>
+</div>
