--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,3 +2,20 @@ li {
   list-style-type: none;
   display: inline-block;
 }
+
+#currentCard {
+    width: 600px;
+    height: 400px;
+    border: 5px solid black;
+    padding: 25px;
+    margin: 25px;
+}
+
+#cardFront {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#flip {
+  horizontal-align: middle;
+}
