"Attempt to add routes to index"

--- a/public/templates/app.html
+++ b/public/templates/app.html
@@ -1,3 +1,11 @@
 <div>
-  <h1>Hello World!</h1>
+  <h3>Choose a deck</h3>
+<!--   <div ng-repeat="deck in $ctrl.decks">{{n}} -->
+  <div id="deck-info"><a href="#">Technical assessment prep</a>
+    <ul>
+      <li><button>Study</button></li>
+      <li><button>Edit</button></li>
+      <li><button>Delete</button></li>
+    </ul>
+  </div>
 </div>
