--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,19 @@
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+  font-family: 'Permanent Marker', cursive;
+}
+
 li {
   list-style-type: none;
   display: inline-block;
+  margin: 0 10px;
+}
+
+#deck-info li {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0 10px;
 }
