--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,3 +2,8 @@ li {
   list-style-type: none;
   display: inline-block;
 }
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+}
