Add dummy data into home page component with ng-init

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,14 +2,18 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
-h1 h2{
+h1, h2{
   font-family: 'Permanent Marker', cursive;
+}
+
+#navBar li {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0 10px;
 }
 
 li {
   list-style-type: none;
-  display: inline-block;
-  margin: 0 10px;
 }
 
 #deck-info li {
@@ -90,7 +94,7 @@ li {
   .separator {
     background-color: gray;
     width: 1px;
-    margin: 25px 10% -10px; 10%;
+    margin: 25px 10% -10px 10%;
   }
 
   input {
@@ -138,4 +142,19 @@ li {
 
 #flip {
   horizontal-align: middle;
+}
+
+.btn {
+  background-color: #4980AE;
+  color: white;
+  font-weight: bold;
+  margin-top: 5px;
+
+  border-radius: 3px;
+  border-color: #4270a2;
+  border-bottom-width: 1px;
+  border-right-width: 1px;
+
+  height: 25px;
+  padding: 2px;
 }
