Iterated study page

--- a/public/templates/studyPage.html
+++ b/public/templates/studyPage.html
@@ -5,11 +5,13 @@
     <h1 id="cardbody" ng-if="!study.front">{{ study.current.back }}</h1>
   </div>
 
-  <button id="flip" ng-click="study.handleFlip()">Flip card</button>
+  <button class="studybutton" id="flip" ng-click="study.handleFlip()">Flip card</button>
   <br>
-  <button id="right" ng-click="study.handleRight()" ng-if="!study.front">Right</button>
-  <button id="wrong" ng-click="study.handleWrong()" ng-if="!study.front">Wrong</button>
+  <button class="studybutton" id="right" ng-click="study.handleRight()" ng-if="!study.front">Right</button>
+  <button class="studybutton" id="wrong" ng-click="study.handleWrong()" ng-if="!study.front">Wrong</button>
   <br>
-  <button id="previous" ng-click="study.handlePrev()">Previous card</button>
-  <button id="next" ng-click="study.handleNext()">Next card</button>
+  <button class="studybutton" id="previous" ng-disabled="!study.showPrev" ng-click="study.handlePrev()">Previous card</button>
+  <button class="studybutton" id="next" ng-disabled="!study.showNext" ng-click="study.handleNext()">Next card</button>
+  <br>
+  <button class="studybutton" id="save" ng-click="study.handleSave()">Save your progress</button>
 </div>
