--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -116,26 +116,54 @@ li {
     padding: 2px;
   }
 }
+/* =========== Study Page =========== */
 
 #currentCard {
-    width: 600px;
-    height: 400px;
-    border: 5px solid black;
-    padding: 25px;
-    margin: 25px;
+  width: 600px;
+  height: 400px;
+  border: 5px solid black;
+  padding: 25px;
+  margin: 25px;
+  border-radius: 15px;
+  position: relative;
 }
 
 #cardbody {
-    display: table-cell;
-    text-align: center;
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
 }
+
+.studybutton {
+  background-color: #4980AE;
+  color: white;
+  font-weight: bold;
+  margin-top: 5px;
+
+  border-radius: 3px;
+  border-color: #4270a2;
+  border-bottom-width: 1px;
+  border-right-width: 1px;
+
+  height: 25px;
+  padding: 2px;
+}
+
+#flip {
+  width: 200px;
+  height: 25px;
+  display: block;
+  margin-left: 255px;
+  margin-right: auto;
+}
+
+
+/* =========== Create/Edit Page =========== */
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
-
-
-#flip {
-  horizontal-align: middle;
-}
