Add simple routing for buttons on homepage

--- a/public/templates/app.html
+++ b/public/templates/app.html
@@ -3,8 +3,8 @@
   <ul>
     <li ng-repeat="item in app.data">
       {{ item.deckname }}
-      <button class="btn">Study</button>
-      <button class="btn">Edit</button>
+      <a href="/study"><button class="btn">Study</button></a>
+      <a href="/edit"><button class="btn">Edit</button></a>
       <button class="btn">Delete</button>
       <br>
     </li>
