"Add button at bottom of deck list linking to deck creation page"

--- a/public/templates/app.html
+++ b/public/templates/app.html
@@ -1,12 +1,14 @@
 <div ng-controller="AppCtrl as app">
   <h3>Choose a deck</h3>
   <ul>
-    <li ng-repeat="item in app.data">
+    <li ng-repeat="item in app.data" class="deck-list-entry">
       {{ item.deckname }}
-      <a href="/study" ng-click="app.getDeck(item)"><button class="btn" >Study</button></a>
+      <a href="/study" ng-click="app.getDeck(item)"><button class="btn">Study</button></a>
       <a href="/edit"><button class="btn" ng-click="app.getDeck(item)">Edit</button></a>
       <button class="btn">Delete</button>
-      <br>
+    </li>
+    <li class="deck-list-entry">
+      <a href="/create"><button class="btn">Create a new deck</button></a>
     </li>
   </ul>
 </div>
