--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -22,6 +22,10 @@ li {
   margin: 0 10px;
 }
 
+.deck-list-entry {
+  margin: 20px;
+}
+
 @media (max-width: 800px) {
   .wrapper {
     width: 50%;
