Create, edit, and study pages working with live db data

--- a/public/templates/app.html
+++ b/public/templates/app.html
@@ -5,7 +5,7 @@
       {{ item.deckname }}
       <a href="/study" ng-click="app.getDeck(item)"><button class="btn">Study</button></a>
       <a href="/edit"><button class="btn" ng-click="app.getDeck(item)">Edit</button></a>
-      <button class="btn">Delete</button>
+      <button class="btn" ng-click="app.handleDelete(item)">Delete</button>
     </li>
     <li class="deck-list-entry">
       <a href="/create"><button class="btn">Create a new deck</button></a>
