--- a/public/templates/createPage.html
+++ b/public/templates/createPage.html
@@ -4,7 +4,7 @@
 <div>
   <createform>
     <label class="left-edit">Front<input ng-model="create.newCard.front" required ></label><br>
-    <label class="right-edit">Back<input ng-model="create.newCard.back" required ></label><br>
+    <label class="right-edit">Back<input ng-keyup="$event.keyCode == 13 && create.addCard(create.newCard)" ng-model="create.newCard.back" required ></label><br>
     <button ng-click="create.addCard(create.newCard)">Add Card</button>
   </createform>
 </div>
@@ -18,7 +18,8 @@
 
   <editform>
     <label class="left-edit">Front<input ng-model="card.front"></label><br>
-    <label class="right-edit">Back<input ng-model="card.back"></label><br>
+    <label class="right-edit">Back<input ng-model="card.back"></label>
+    <button ng-click="create.deleteCard(card)">Delete card</button>
   </editform>
   </cardlist>
 </div>
