--- a/public/templates/editPage.html
+++ b/public/templates/editPage.html
@@ -1,12 +1,12 @@
 <div ng-controller="EditPageCtrl as edit">
-<h1>DECK NAME: {{edit.deck.deckname}}</h1>
+<h1>DECK NAME: <input ng-model="edit.deck.deckname"></h1>
 
 <div>
   <individualcard></individualcard>
    <!--the above line references a to-be-made Angular component  -->
    <createform>
     <label class="left-edit">Front<input ng-model="edit.newCard.front" required ></label><br>
-    <label class="right-edit">Back<input ng-model="edit.newCard.back" required ></label><br>
+    <label class="right-edit">Back<input ng-keyup="$event.keyCode == 13 && edit.addCard(edit.newCard)" ng-model="edit.newCard.back" required ></label><br>
     <button ng-click="edit.addCard(edit.newCard)">Add Card</button>
   </createform>
 </div>
@@ -17,6 +17,7 @@
   <editform>
     <label class="left-edit">Front<input ng-model="card.front"></label><br>
     <label class="right-edit">Back<input ng-model="card.back"></label><br>
+    <button ng-click="edit.deleteCard(card)">Delete card</button>
   </editform>
   </cardlist>
 </div>
