--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,19 +2,31 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
-h1, h2{
-  font-family: 'Permanent Marker', cursive;
+li {
+  list-style-type: none;
+  /*text-align: center;*/
 }
 
+.black-border {
+  border: 2px solid black;
+}
+
+.green-border {
+  border: 2px solid green;
+}
+
+
+/*h1, h2{
+  font-family: 'Permanent Marker', cursive;
+}*/
+
+/*
 #navBar li {
   list-style-type: none;
   display: inline-block;
   margin: 0 10px;
 }
 
-li {
-  list-style-type: none;
-}
 
 #deck-info li {
   list-style-type: none;
@@ -25,6 +37,7 @@ li {
 .deck-list-entry {
   margin: 20px;
 }
+
 
 @media (max-width: 800px) {
   .wrapper {
@@ -123,10 +136,10 @@ li {
     height: 25px;
     padding: 2px;
   }
-}
+}*/
 /* =========== Study Page =========== */
 
-#currentCard {
+/*#currentCard {
   width: 600px;
   height: 400px;
   border: 5px solid black;
@@ -166,21 +179,21 @@ li {
   display: block;
   margin-left: 255px;
   margin-right: auto;
-}
+}*/
 
 /* =========== Create/Edit Page =========== */
 
-.card {
+/*.card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
-  width: 50%; /* 5px rounded corners */
+  width: 50%;
 }
 
-.left-edit {
+/*.left-edit {
   float: left;
 }
 
 .right-edit {
   float: right;
-}
+}*/
