--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -15,6 +15,30 @@ li {
   border: 2px solid green;
 }
 
+.flashcard {
+  border: 1px solid gray;
+  padding-bottom: 10px;
+  margin: 10px;
+}
+
+.flashcard textarea {
+  resize: none;
+  display: block;
+  width: 100%;
+  height: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.flashcard h4 {
+  text-align: center;
+}
+
+.savedeckbtn {
+  margin-top: 10px;
+}
+
+
 
 /*h1, h2{
   font-family: 'Permanent Marker', cursive;
