--- a/public/templates/app.html
+++ b/public/templates/app.html
@@ -1,6 +1,25 @@
-<div ng-controller="AppCtrl as app">
+<div ng-controller="AppCtrl as app" class="container">
   <h3>Choose a deck</h3>
-  <ul>
+
+  <table class="table table-striped table-bordered table-hover">
+    <tr ng-repeat="item in app.data" class="deck-list-entry">
+      <td>{{ item.deckname }}</td>
+      <td><a href="/study" ng-click="app.getDeck(item)"><button class="buttonInTable btn btn-primary">Study</button></a></td>
+      <td><a href="/edit"><button class="buttonInTable btn btn-info" ng-click="app.getDeck(item)">Edit</button></a></td>
+      <td><button class="buttonInTable btn btn-danger" ng-click="app.handleDelete(item)">Delete</button></td>
+    </tr>
+
+  </table>
+
+  <a href="/create"><button class="btn btn-info">Create a new deck</button></a>
+
+
+
+
+
+
+
+<!--   <ul>
     <li ng-repeat="item in app.data" class="deck-list-entry">
       {{ item.deckname }}
       <a href="/study" ng-click="app.getDeck(item)"><button class="btn">Study</button></a>
@@ -10,5 +29,29 @@
     <li class="deck-list-entry">
       <a href="/create"><button class="btn">Create a new deck</button></a>
     </li>
-  </ul>
+  </ul> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
