(feat) Add ability to flip cards by clicking on the card instead of a button, add minor styling to study page buttons

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -38,6 +38,18 @@ li {
   margin-top: 10px;
 }
 
+.progressRatingButtons li {
+  display: inline-block;
+}
+
+.skipCardButtons li {
+  display: inline-block;
+}
+
+.studyNavigation {
+  margin: 0 auto;
+  width: 50%;
+}
 
 
 /*h1, h2{
