--- a/public/templates/studyPage.html
+++ b/public/templates/studyPage.html
@@ -3,7 +3,7 @@
 
   <div class="flashcard" ng-click="study.handleFlip()">
 
-  <div class="studycard">
+<!--   <div class="studycard"> -->
     <h1 id="cardbody" ng-if="study.front">{{ study.current.front }}</h1>
     <h1 id="cardbody" ng-if="!study.front">{{ study.current.back }}</h1>
   </div>
