--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -48,26 +48,18 @@ td {
   word-wrap: break-word;
 }
 
-.progressRatingButtons li {
-  display: inline-block;
-}
-
-.skipCardButtons li {
-  display: inline-block;
-}
-
-.studyNavigation {
-  margin: 0 auto;
-  width: 50%;
-}
 .studycard {
+  box-shadow: 3px 3px 5px #888888;
   border: 1px solid gray;
+  border-radius: 3px;
+  padding-bottom: 10px;
   margin: 0 auto;
   width: 50%;
   text-align: center;
   height: 20em;
   padding: 6.5em;
 }
+
 table {
   table-layout: fixed;
 }
@@ -97,6 +89,7 @@ form > * {
   padding: 4px;
   margin: 8px;
 }
+
 
 /*h1, h2{
   font-family: 'Permanent Marker', cursive;
