Float code button to right

--- a/public/templates/createPage.html
+++ b/public/templates/createPage.html
@@ -25,14 +25,26 @@
       <div class="row">
         <div class="col-xs-5 flashcard">
           <h4>Question</h4>
-          <button ng-click="create.toggleHighlightFront(card)" ng-class="{'btn': card.plaintextFront, 'btn btn-primary': !card.plaintextFront}"><span class="fa fa-code"></span></button>
+
+          <div class="codeToggleBtn">
+            <button ng-click="create.toggleHighlightFront(card)" ng-class="{'btn': card.plaintextFront, 'btn btn-primary': !card.plaintextFront}">
+              <span class="fa fa-code"></span>
+            </button>
+          </div>
+
           <hr>
           <textarea placeholder="Enter a question" ng-model="card.front"></textarea>
         </div>
 
         <div class="col-xs-5 flashcard">
           <h4>Answer</h4>
-          <button ng-click="create.toggleHighlightBack(card)" ng-class="{'btn': card.plaintextBack, 'btn btn-primary': !card.plaintextBack}"><span class="fa fa-code"></span></button>
+
+          <div class="codeToggleBtn">
+            <button ng-click="create.toggleHighlightBack(card)" ng-class="{'btn': card.plaintextBack, 'btn btn-primary': !card.plaintextBack}">
+              <span class="fa fa-code"></span>
+            </button>
+          </div>
+
           <hr>
           <textarea placeholder="Enter the answer" ng-model="card.back"></textarea>
         </div>
