Tweaked study page button alignment

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -56,6 +56,14 @@ td {
   clear: both;
 }
 
+.divParent {
+  justify-content: flex-end;
+}
+
+.divParent button {
+  min-width: 111px;
+}
+
 hr {
   clear: both;
 }
